修复复习状态同步与勾选视觉
- 历史章节标签迁移为独立且初始未复习的复习块\n- 新增内容点击后再进入复习推送，并同步一级标题与小标签状态\n- 修复勾选导致课程树闪烁，统一蓝白勾选样式并使用圆角勾线\n- 增加复习块迁移与初始状态单元测试